added stop on first failure feature